--- a/src/components/DoctorList.css
+++ b/src/components/DoctorList.css
@@ -9,6 +9,14 @@
   margin: 0 auto; 
 }
 
+.doctor-img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+
 .doctor-card {
   margin: 0 auto; 
   min-width: 900px;
